client/src/App.css
@import url("https://fonts.googleapis.com/css2?family=Grand+Hotel&display=swap");

a {
  color: black !important;
}

.brand-logo,
h2 {
  font-family: "Grand Hotel", cursive;
}

.auth-card {
  max-width: 400px;
  padding: 20px;
  margin: 10px auto;
  text-align: center;
}

.mycard{
    padding-top: 30px;
}

input:focus {
  border-bottom: 1px solid #0095f6 !important;
  box-shadow: 0 1px 0 0 #0095f6 !important ;
}

a.btn.red.darken-2.text-white {
    color: white !important;
}

.signin.btn, .btn{
    background-color: #0095f6 !important;
}

.auth-link a{
    color: #0095f6 !important;
}

/* default */

.profile, .home, .createPost{
    max-width: 935px;
    margin: 0px auto;
}

i:hover{
    cursor: pointer;
}

.preloader-wrapper {
    margin: 40vh auto;
    display: block;
}

h4{
    margin: .912rem 0 .912rem 0;
}


/* Profile Css */

.profile-details {
    display: flex;
    width: 100%;
    margin: 40px auto 10px auto;
    border-bottom: 1px solid;
    max-height: 250px;
}

.profile-image {
    width: 40%;
    text-align: center;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    padding: 20px 0px;
}

.button.btn.profile-pic-button {
    height: 20px;
    line-height: 20px;
    font-size: 12px;
    margin-top: 10px;
}

.profile-image img {
    border-radius: 50%;
    width: 160px;
    height: 160px;
}

.profile-stats {
    display: flex;
    width: 100%;
    justify-content: space-between;
}

.profile-stats-details {
    width: 50%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin: 0px auto;
}

.gallery .item {
    display: flex;
    justify-content: center;
    flex-direction: row;
    max-height: 200px;
    align-items: center;
    background: black;
}

.gallery {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    column-gap: 25px;
    row-gap: 20px;
}

.item img {
    width: 100%;
}

div#change-profile-div {
    position: absolute;
    background: gainsboro;
    width: 500px;
    height: 140px;
    z-index: 1;
    padding: 20px;
}

div#change-profile-div .file-field .btn{
    padding: 0px;
    width: 100%;
}

/*  home  */

.home{
    margin:40px auto 30px;
}

.home .card-content.title {
    padding: 10px 10px 0px;
}

/* createPost */

.createPost .input-field{
    text-align: center;
}

.card .card-image {
    background: black;
}

.card .card-image img {
    max-height: 500px;
    object-fit: contain;
}

#change-profile-div{
    display: none;
}

button.changeprofile.btn.waves-effect {
    height: 20px !important;
    line-height: 20px;
}

ul#nav-mobile{
    display: none;
    margin: 0px;
}

/* 
Responsive
*/

@media (max-width: 935px){
    .profile, .home, .createPost {
        max-width: 80%;
        margin: 0px auto;
    }
}

@media (max-width: 575px){
    .profile, .home, .createPost {
        max-width: 90%;
        margin: 0px auto;
    }
    .profile-image img {
        width: 90px;
        height: 90px;
    }
    
    .profile-details{
        margin-top: 0px;
    }

    button.changeprofile.btn.waves-effect {
        height: 20px !important;
        line-height: 10px;
        padding: 5px;
        font-size: 12px;
    }

    div#change-profile-div {
        position: absolute;
        background: gainsboro;
        width: 300px;
        height: 200px;
        z-index: 1;
        padding: 20px;
    }

    div#change-profile-div button.change.btn.waves-effect {
        margin: 75px auto 0px auto;
    }

    h4 {
        font-size: 1.5rem;
    }

    h6.stats {
        font-size: 12px;
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    ul#nav-desktop {
        display: none;
    }

    ul#nav-mobile {
        position: fixed;
        width: 100%;
        left: 0px;
        bottom: 0;
        display: flex;
        background: #e4e1e1;
        padding: 10px;
        z-index: 1;
    }

    ul#nav-mobile li {
        display: inline-block;
        margin: auto;
    }

    ul#nav-mobile li a {
        font-size: 12px;
    }

    .mycard {
        padding: 10px;
    }
}

